--- a/Ergonomikus_web/Draw/draw.html
+++ b/Ergonomikus_web/Draw/draw.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" href="draw.css" />
 </head>
 <body>
+    <h1>Draw</h1>
 	<div id="tableholder"></div>
     <div id="colors"></div>
+    <div id="buttons"></div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="draw.js"></script>
 </body>
