The game is now functional

--- a/numgame.html
+++ b/numgame.html
@@ -9,5 +9,15 @@
 </head>
 <body>
     <h1>numgame.exe</h1>
+    <div id="intro">
+        I picked a number between 1 and 100. You have to guess that number.<br>
+        Made by Péter Farkas in 2016.<br>
+        <a class="start" href="#">Start</a>
+    </div>
+    <p id="status">&nbsp;</p>
+    <form id="game">
+        <input id="guess" type="text" placeholder="Enter your guess"><br>
+        <input type="submit">
+    </form>
 </body>
 </html>
