--- a/excel.html
+++ b/excel.html
@@ -2,9 +2,11 @@
 <html lang="hu">
 	<head>
 		<meta charset="utf-8" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="excel.css">
 		<script src="excel.js"></script>
+        <title>NOT the Microsoft Excel</title>
 	</head>
-	<body></body>
+	<body>
+	</body>
 </html>
